# vagrantx

./: Cargo.toml  Makefile
sample/: XVagrantfile-bionic.json  XVagrantfile.json
src/: main.rs
